figure out that rails 5 needs to be run in production, even locally. Errors ensue otherwise

--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -3,5 +3,6 @@
   <a href="/online">who's online</a>
   <a href="/tutorials">tutorials</a>
   <a href="/tutors">tutors</a>
+  <a href="/company_search">company_search</a>
 </pre>
 
