--- a/app/views/partials/_inbox.html.erb
+++ b/app/views/partials/_inbox.html.erb
@@ -2,7 +2,7 @@
   <container id="inbox">
     <% @current_user.conversations.each do |conversation| %>
       <a href="/user/<%= conversation.other_user.id %>"><%= conversation.other_user.name || "ned" %></a>
-      <pre><%= conversation.messages.first(3).join("\n") %></pre>
+      <pre><%= conversation.messages.last(3).reverse %></pre>
     <% end %>
   </container>
 <% end %>
