--- a/app/views/partials/_new_message.html.erb
+++ b/app/views/partials/_new_message.html.erb
@@ -4,7 +4,7 @@
       <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
       <input type="hidden" name="user_id" value="<%= @user.id %>">
       <textarea name="content" id="" cols="30" rows="10"></textarea> <br>
-      <input type="submit" value="submit">
+      <input type="submit" value="send message">
     </form>
   <% end %>
 </container>
