--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -1,5 +1,4 @@
 <% user =  @current_user %>
-<%= render "partials/user_form", user: user %>
+<%= render "partials/user_form", user: user %> <hr>
 <%= render "partials/user_pinger" %>
-<%= render "partials/user_list" %>
-<%= render "partials/user_messages" %>
+<%= render "partials/user_list" %> <hr>
