--- a/app/views/partials/_user_messages.html.erb
+++ b/app/views/partials/_user_messages.html.erb
@@ -1,8 +1,16 @@
 <% if @current_user %>
+  <h4>Alerts</h4>
   <container id="user-messages">
     <div class="user<%= @current_user.session_token%>-index">
       <div template="">
-        <li><span template-attr="msg"></span></li>
+        <li>
+          <b><span template-attr="sender_name"></span></b>
+          <span template-attr="msg"></span> - <form skip-sockets class="notform" action="message">
+            <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+            <input type="hidden" name="id" template-attr="id">
+            <input type="submit" value="link">
+          </form>
+        </li>
       </div>
     </div>
   </container>
