--- a/app/views/partials/_new_message.html.erb
+++ b/app/views/partials/_new_message.html.erb
@@ -1,8 +1,8 @@
 <container id="new-message">
   <% if @current_user && @user %>
-    <form skip-sockets action="new_message">
+    <form skip-sockets action="/new_message">
       <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-      <input type="hidden" name="user_id" value="<%= @user.id %>">
+      <input type="hidden" name="id" value="<%= @user.id %>">
       <textarea name="content" id="" cols="30" rows="10"></textarea> <br>
       <input type="submit" value="send message">
     </form>
