--- a/app/views/pages/user.html.erb
+++ b/app/views/pages/user.html.erb
@@ -1,15 +1,22 @@
 <container id="user">
   <h4>User profile page</h4>
   <b>Name: <%= @user.name %></b><br>
-  <b>Email: <%= @user.email %></b> <br> <hr>
+  <b>Email: <%= @user.email %></b> <br>
+  <b>Skills: <%= @user.skills %></b>
+  <h5>Rates</h5>
+  <ul>
+    <li>5 minutes: <%= "$#{@user.five_minute_cost}" || "?" %> (<a href="/payment_request?id=<%= @user.id %>&length=5">request</a>)</li>
+    <li>15 minutes: <%= "$#{@user.fifteen_minute_cost}" || "?" %> (<a href="/payment_request?id=<%= @user.id %>&length=15">request</a>)</li>
+    <li>30 minutes: <%= "$#{@user.thirty_minute_cost}" || "?" %> (<a href="/payment_request?id=<%= @user.id %>&length=30">request</a>)</li>
+    <li>60 minutes: <%= "$#{@user.sixty_minute_cost}" || "?" %> (<a href="/payment_request?id=<%= @user.id %>&length=60">request</a>)</li>
+  </ul>
+  <hr>
   <% if @user.is_user?(@current_user) %>
-    <%= render "partials/inbox" %> <br>     <hr>
+    <%= render "partials/inbox" %> <br><hr>
   <% end %>
   <% if @user %>
-    <b>Conversation</b> <br> <br>
-    <% @current_user.messages_with(@user).uniq(&:id).each do |msg| %>
-      <li><i><%= msg.from_user.name %></i>: <%= msg.content_string %></li>
-    <% end %>
+    <%= render "partials/payment_requests", current_user: @current_user, user: @user %> <hr>
+    <%= render "partials/conversation", current_user: @current_user, user: @user %> <hr>
   <% end %>
   <hr>
   <%= render "partials/new_message" %>
