--- a/app/views/partials/_user_form.html.erb
+++ b/app/views/partials/_user_form.html.erb
@@ -1,41 +1,16 @@
 <% @user ||= User.new %>
 <% user ||= @user %>
-
 <container class="container" id="user-form">
-<div class="row">
-
-    <div class="col-sm-2 col-xs-12">
-      
-      <button toggles=".register-form"><%= user.persisted? ? "edit profile" : "register" %></button> <br>
-      <form class="register-form" skip-sockets action="/register" method="POST">
-        <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-        <input type="hidden" name="id" value="<%= user.id %>">
-        <input value="<%= user.name %>" type="text" name="name" placeholder="name"> <br>
-        <input value="<%= user.email %>" type="email" name="email" placeholder="email"> <br>
-        <input type="password" name="password" placeholder="password"> <br>
-        <input type="submit" value="submit">
-      </form> <br>
-
-    </div>
-
-    <div class="col-xs-12 col-sm-2">
-      
-      <% if user.persisted? %>
-        <form skip-sockets class="notform logout-form" method="POST" action="/logout">
-          <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-          <input class="button" type="submit" value="logout">
-        </form>
-      <% else %>
-        <button toggles=".login-form">login</button> <br>
-        <form skip-sockets class="login-form" method="POST" action="/login">
-          <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-          <input type="text" name="email" placeholder="email"> <br>
-          <input type="password" name="password" placeholder="password"> <br>
-          <input type="submit" value="submit">
-        </form>
-      <% end %>
-
-    </div>
-
-</div>
+  <div class="row">
+      <div class="col-sm-2 col-xs-12">
+        <%= render "partials/register_form", user: user %>
+      </div>
+      <div class="col-xs-12 col-sm-2">
+        <% if user.persisted? %>
+          <%= render "partials/logout_form", user: user %>
+        <% else %>
+          <%= render "partials/login_form", user: user %>
+        <% end %>
+      </div>
+  </div>
 </container>
